--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
 
+body {
+  font-family: Arial;
+  margin: 0;
+  background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;;
+}
+
 header {
+  height: 30%;
+  padding: 20px;
   text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+  margin-bottom: 10%;
 }
 
 .container {
@@ -8,4 +20,38 @@ header {
   flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
+  gap: 20px;
+  margin: 20px;
+}
+
+.Card img {
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
+  background-color: black;
+}
+
+.Card {
+  color: #000;
+  background-color: #fff;
+  padding-bottom: 20px;
+  box-shadow: 0 15px 25px #817c7c33;
+  font-size: medium;
+  border-radius: 14px;
+  backdrop-filter: blur(2px);
+  text-align: center;
+  margin-bottom: 30px;
+  height: 450px;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #f4cb81;
+  cursor: pointer;
+  transition: border-color .25s;
 }
